@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>425</width>
-    <height>150</height>
+    <height>81</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -23,27 +23,6 @@
       <property name="margin">
        <number>5</number>
       </property>
-      <item>
-       <widget class="QCheckBox" name="chbEnableAlerts">
-        <property name="text">
-         <string>Enable alerts in task bar</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="chbExpandRosterGroups">
-        <property name="text">
-         <string>Expand contact groups in roster</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="chbDisableSoundsWhenDND">
-        <property name="text">
-         <string>Disable sounds when status is 'Do not disturb'</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
